--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,6 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 0;
     overflow: hidden;
 }
 
@@ -43,7 +42,6 @@ body {
 }
 
 .banner-background svg{
-    
     width: 10vw;
     height: auto;
 }
@@ -64,5 +62,43 @@ body {
     font-size: 4rem;
 }
 
+/*================[ MENU ]*/
+#nav-bar{
+    position: sticky;
+    top: 0;
+}
 
+#nav-bar ol{
+    background: black;
 
+    list-style: none;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    height: 8vh;
+}
+
+#nav-bar a{
+    text-decoration: none;
+    color: white;
+    padding: 1rem;
+}
+
+#nav-bar a:hover{
+    background: white;
+    color: black;
+}
+
+#nav-bar li:hover{
+    scale: 1.1;
+    transition: 0.3s ease-in-out;
+}
+
+/*================[ SECTIONS ]*/
+section{
+    margin: 10vh auto;
+    padding: 10vw;
+}
