--- a/styles/style.css
+++ b/styles/style.css
@@ -41,9 +41,9 @@ body {
     object-fit: cover;
 }
 
-.banner-background svg{
-    width: 10vw;
-    height: auto;
+.banner-content .icon{
+    width: 40vw;
+    max-width: 500px;
 }
 
 .banner-content{
@@ -97,8 +97,20 @@ body {
     transition: 0.3s ease-in-out;
 }
 
+#nav-bar .icon{
+    width: 4rem;
+    margin: 0 20px 0 0;
+}
+
 /*================[ SECTIONS ]*/
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 section{
-    margin: 10vh auto;
-    padding: 10vw;
+    width: 70%;
+    max-width: 700px;
+    margin: 5% auto 0 auto;
 }
