--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,10 @@
     font-family: "Montserrat", sans-serif;
 }
 
+ul, ol {
+    list-style: none;
+}
+
 /*================[ BODY ]*/
 body {
     width: 100vw;
@@ -66,6 +70,7 @@ body {
 #nav-bar{
     position: sticky;
     top: 0;
+    z-index: 2;
 }
 
 #nav-bar ol{
@@ -110,7 +115,173 @@ main{
 }
 
 section{
-    width: 70%;
+    width: 80%;
     max-width: 700px;
     margin: 5% auto 0 auto;
+    text-align: center;
+    scroll-margin-top: 10vh;
 }
+
+section h2{
+    margin: auto auto 20px auto;
+}
+
+section h3{
+    margin: 20px auto 20px auto;
+}
+
+/*================[ CARDS ]*/
+.card-image{
+    border-radius: 10px;
+}
+
+/*================[ OUR HISTORY ]*/
+#our-history{
+    width: 70%;
+}
+
+#our-history .card{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    text-align: left;
+}
+
+#our-history .card-image{
+    width: 50%;
+}
+
+/*================[ ABOUT US ]*/
+.values{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin: auto;
+}
+
+.value{
+    flex: 1 1 calc(33.33% -20px);
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    height: 150px;
+    max-width: 200px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.value img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.3s ease-in-out;
+}
+
+.value:hover img{
+    transform: scale(1.1);
+}
+
+.value .info{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    padding: 20px;
+    text-align: center;
+}
+
+.value .info h4{
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: #f4f4f4;
+}
+
+.value .info p{
+    font-size: 10px;
+}
+
+.value.active .info{
+    opacity: 1;
+}
+
+/*================[ SERVICES ]*/
+
+#services .card{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#services .card-image{
+    width: 100%;
+}
+
+#services .card-content{
+    padding: 0 1.5rem 1rem 1.5rem;
+    text-align: center;
+}
+
+#services .section-content{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 2rem;
+}
+
+
+/*================[ REVIEWS ]*/
+#reviews .section-content{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 2rem;
+}
+
+.divider{
+    background: black;
+
+    width: 100%;
+    height: 2px;
+    
+    border-radius: 20px;
+}
+
+/*================[ CONTACT ]*/
+#contact form{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+#message{
+    resize: none;
+}
+
+button{
+    padding: 0.5rem;
+    border-radius: 10px;
+    background: black;
+    color: white;
+}
+
+
+/*================[ FOOTER ]*/
+footer{
+    background: black;
+    color: white;
+    text-align: center;
+    padding: 5em;
+    margin-top: 50px;
+}
+
